# claudehopper

./: .beans.yml  .gitignore  .goreleaser.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh  main.go  pyproject.toml
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
cmd/: create.go  create_test.go  delete.go  diff.go  helpers.go  list.go  list_test.go  path.go  pick.go  root.go  root_test.go  sessions.go  share.go  stats.go  status.go  switch.go  switch_test.go  tree.go  unmanage.go  unshare.go  update.go
docs/: claude-setup-guide.md  development.md
internal/config/: config.go  config_test.go  manifest.go  manifest_test.go  paths.go  paths_test.go
internal/fs/: atomic.go  atomic_test.go  protected.go  protected_test.go
internal/profile/: create.go  create_test.go  delete.go  delete_test.go  diff.go  diff_test.go  list.go  list_test.go  share.go  share_test.go  shared.go  shared_test.go  status.go  status_test.go  switch.go  switch_test.go  testhelpers_test.go  tree.go  tree_test.go  unmanage.go  unmanage_test.go  validate.go  validate_test.go
internal/session/: complete.go  prune.go  scan.go  titles.go
internal/updater/: updater.go  updater_test.go
internal/usage/: usage.go  usage_test.go
scripts/: sandbox.sh
src/claude_swap/: __init__.py  cli.py
src/claudehopper/: __init__.py  cli.py
tests/: test_cli.py
(+36 files in other folders)
